Add new query and improve routing & error handling
Enable sellers to query a list of item categories assigned to them
Update the routes of all API endpoints for a better naming convention
Create a function to add http status code to an error before throwing it
Fix http status code for all errors in the server
